# alephone-android

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
.github/: patched-default-build-commands.mk  patched.android.toolchain.cmake
.github/workflows/: android-cd.yml  android.yml
SDL2/: build.gradle
SDL2/src/main/: AndroidManifest.xml
SDL2/src/main/cpp/: CMakeLists.txt
SDL2/src/main/res/values/: strings.xml
SDL_image/: build.gradle
SDL_image/src/main/cpp/: Android.mk
SDL_image/src/main/res/values/: strings.xml
SDL_mixer/: build.gradle
SDL_mixer/src/main/: AndroidManifest.xml
SDL_mixer/src/main/cpp/: Android.mk
SDL_net/: build.gradle
SDL_net/src/main/: AndroidManifest.xml
SDL_net/src/main/cpp/: Android.mk
SDL_net/src/main/cpp/SDL2/: Android.mk
SDL_ttf/: build.gradle
SDL_ttf/src/main/: AndroidManifest.xml
SDL_ttf/src/main/cpp/: Android.mk
app/: build.gradle
app/src/androidTest/java/com/example/sdl2test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  CMakeLists.txt
app/src/main/java/com/marathon/alephone/: AlephOneActivity.java  AlertUtils.java  DataDatabase.java  DataEntry.java  DataEntryDao.java  DataInstaller.java  DataScanner.java  DataSelectorActivity.java  DataSelectorAdapter.java  DataSelectorItem.java  IDataInstallListener.java  IInstallListener.java  MainActivity.java  NotificationsManager.java  ScenarioSelectorActivity.java
app/src/main/java/com/marathon/alephone/plugins/: Plugin.java  PluginsInstaller.java  PluginsScanner.java
app/src/main/java/com/marathon/alephone/processors/: FileProcessingRequest.java  IFileProcessor.java  PluginsInstallProcessor.java  SAFFileLongProcessor.java  SAFFileProcessor.java  ScenarioDataExportProcessor.java  ScenarioDataImportProcessor.java  ScenarioInstallProcessor.java
app/src/main/java/com/marathon/alephone/scenario/: Converters.java  IScenarioInstallListener.java  IScenarioManager.java  IScenarioUninstallListener.java  ScenarioDao.java  ScenarioDatabase.java  ScenarioDownloader.java  ScenarioEntry.java  ScenarioExporter.java  ScenarioInstaller.java  ScenarioManager.java  ScenarioScanner.java  ScenarioSelectorAdapter.java  ScenarioSelectorEmptyItem.java  ScenarioSelectorItem.java  ScenarioUninstaller.java
app/src/main/res/layout/: activity_main.xml  data_selector.xml  data_view.xml  scenario_list.xml  scenario_view.xml  scenario_view_empty.xml
app/src/main/res/menu/: menu.xml  scenario_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/marathon/res/values/: strings.xml
app/src/marathon2/res/values/: strings.xml
app/src/marathonInfinity/res/values/: strings.xml
app/src/test/java/com/example/sdl2test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
graphics/: icons.psd
hidapi/: build.gradle
hidapi/src/main/: AndroidManifest.xml
hidapi/src/main/res/values/: strings.xml
vorbis/: build.gradle
vorbis/src/main/: AndroidManifest.xml
vorbis/src/main/cpp/: CMakeLists.txt
vorbis/src/main/res/values/: strings.xml
